rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldCompile/syntax02/Test.java
// .result=COMPILE_PASS
import java.util.*;

public class Test {
	
	interface A {
		ArrayList<Integer>[][] m(int i);
	}
	
	public static void main(String[] arg) {
		A a = ArrayList[][]::new;
	}

}